--- a/product_detail.html
+++ b/product_detail.html
@@ -535,6 +535,104 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="clearfix"></div>
+
+
+                        <div class="description_product">
+                            <div class="description-header border_dotted-bottom">
+                                <h2>
+                                    <a class="btn-det_link" type="button" data-toggle="collapse" data-target="#description">
+                                        Description
+                                    </a>
+                                </h2>
+                            </div>
+                            <div id="description" class="collapse in">
+                                <div class="description-body">
+                                    <p>This mobiles packs powerful Adreno 650 processor with 4000 Mah battery fr the longer tie usage</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="description_product">
+                            <div class="description-header border_dotted-bottom">
+                                <h2>
+                                    <a class="btn-det_link" type="button" data-toggle="collapse" data-target="#tc_product">
+                                        Terms & Conditions
+                                    </a>
+                                </h2>
+                            </div>
+                            <div id="tc_product" class="collapse in">
+                                <div class="description-body">
+                                    <p>The images represent actual product though color of the image and product may slightly differ.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="useful_link_product">
+                            <div class="useful_link_product-header border_dotted-bottom">
+                                <h2>
+                                    <a class="btn-det_link" type="button" data-toggle="collapse" data-target="#useful_link_product">
+                                        Quick links
+                                    </a>
+                                </h2>
+                            </div>
+                            <div id="useful_link_product" class="collapse in">
+                                <div class="useful_link_product-body">
+                                    <ul class="list">
+                                        <li class="list-item col-md-4 col-sm-6 col-xs-8">
+                                            <p class="">
+                                                Product Type: <a href="#" >Mobile & Tablet</a> > <a href="#" >Mobile phone</a>
+                                            </p>
+                                        </li>
+                                        <li class="list-item col-md-4 col-sm-6 col-xs-8">
+
+                                            <p class="">
+                                                Brand: <a href="#" >Redmi</a> >
+                                            </p>
+                                        </li>
+                                        <li class="list-item col-md-4 col-sm-6 col-xs-8">
+                                            <p class="">
+                                                Camera: <a href="#" >12MP</a> >
+                                            </p>
+                                        </li>
+                                        <li class="list-item col-md-4 col-sm-6 col-xs-8 ">
+
+                                            <p class="">
+                                                Color <a href="#" >Black</a> > 
+                                            </p>
+                                        </li>
+                                        <li class="list-item col-md-4 col-sm-6 col-xs-8 ">
+                                            <p class="">
+                                                Internal Memory<a href="#" >16GB</a> > 
+                                            </p>
+                                        </li>
+                                        <li class="list-item col-md-4 col-sm-6 col-xs-8">
+                                            <p class="">
+                                                Battery <a href="#" >4000 Mah</a> > 
+                                            </p>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+                        <div class="review_box_pro_de">
+                            <h2 class="review_hd_pro_de">Ratings & Reviews</h2>
+                            <div class="col-md-2 col-sm-6 col-xs-12 no-padding review_star border text-center">
+                                <h2>4.8/5</h2>
+                                <p>4 rating & 0 reviews</p>
+
+                            </div>
+
+                            <div class="col-md-8 col-sm-6 col-xs-12 no-padding review_per border text-center">
+                                <h2>100%</h2>
+                                <p>Based on 3 Recommendations.</p>
+                            </div>
+                            <div class="col-md-2 col-sm-6 col-xs-12 no-padding review_write border text-center">
+                               <p>Have you used this product?</p>
+                                <a href="" class="btn btn-primary">REVIEWS</a>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
