--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                         <input type="text" class="form-control grey" placeholder="Search for shops and products">
                                         <span class="input-group-btn">
                                             <button class="btn btn-default" type="button">
-                                                <img src="images/sr_ic.png" width="15">
+                                                <i class="fas fa-search"></i>
                                             </button>
                                         </span>
                                     </div>
@@ -306,15 +306,15 @@
                                     <li class="radio width_50">
                                         <label><input type="radio" class="" name="location" id="location" checked>Located</label>
                                     </li>
-                                    <li class="width_50">
+                                    <li class="width_50 miles">
                                         <select class="custom-select custom-select-xl grey">
-                                            <option selected="1">1</option>
-                                            <option value="2">2</option>
-                                            <option value="3">3</option>
-                                            <option value="4">4</option>
-                                            <option value="5">5</option>
+                                            <option selected="100">100</option>
+                                            <option value="2">200</option>
+                                            <option value="3">300</option>
+                                            <option value="4">400</option>
+                                            <option value="5">500</option>
                                         </select>
-                                        miles of
+                                        <span>miles of</span>
                                         <input type="text" class="" placeholder="600027" />
                                     </li>
                                 </ul>
