--- a/shop_detail.html
+++ b/shop_detail.html
@@ -416,7 +416,9 @@
                                     <div class="input-group">
                                         <input type="text" class="form-control" placeholder="Search with the reviews...">
                                         <span class="input-group-btn">
-                                            <button class="btn btn-default" type="button"><img src="images/sr_ic.png"></button>
+                                            <button class="btn btn-default" type="button">
+                                                <i class="fas fa-search"></i>
+                                            </button>
                                         </span>
                                     </div><!-- /input-group -->
                                 </div>
