--- a/product_detail.html
+++ b/product_detail.html
@@ -383,7 +383,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
-                        <div class="heighligts" id="heighligts">
+                        <div class="heighligts">
                             <div class="heighligts-header border_dotted-bottom">
                                 <h2>
                                     <a class="btn-det_link" type="button" data-toggle="collapse" data-target="#heighligts">
@@ -643,7 +643,7 @@
                                     <a class="btn btn-default">NO</a>
                                 </div>
                             </div>
-                            <div class="col-md-4 col-sm-6 col-xs-12 no-padding review_write border text-center">
+                            <div class="col-md-4 col-sm-12 col-xs-12 no-padding review_write border text-center">
                                 <p>Have you used this product?</p>
                                 <a href="" class="btn btn-primary">REVIEWS</a>
                             </div>
@@ -652,12 +652,12 @@
 
                         <div class="review_text_pro_de" id="review_text_pro_de">
                             <p class="review_text_pag_titl">1-9 of 9 Reviews</p>
-                            <div class="col-md-12 col-sm-6 col-xs-12 no-padding rev_search_wrap">
+                            <div class="col-md-12 col-sm-12 col-xs-12 no-padding rev_search_wrap">
                                 <div class="col-md-6 col-sm-6 col-xs-12 no-padding rev_search">
-                                    <div class="col-md-5 col-sm-6 col-xs-12 no-padding rev_search_teaser">
+                                    <div class="col-md-5 col-sm-5 col-xs-12 no-padding rev_search_teaser">
                                         <h2>Customer reviews</h2>
                                     </div>
-                                    <div class="col-md-7 col-sm-6 col-xs-12 rev_search_icon">
+                                    <div class="col-md-7 col-sm-7 col-xs-12 rev_search_icon">
                                         <div class="input-group">
                                             <span class="input-group-btn">
                                                 <button class="btn no-border" type="button">
@@ -685,7 +685,7 @@
                                 <div class="col-md-1 col-sm-2 col-xs-12 rev_search_texting_name">
                                     <span>S</span>
                                 </div>
-                                <div class="col-md-11 col-sm-2 col-xs-12 rev_search_texting_text">
+                                <div class="col-md-11 col-sm-10 col-xs-12 rev_search_texting_text">
                                     <span class="rev_star">
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
@@ -706,7 +706,7 @@
                                 <div class="col-md-1 col-sm-2 col-xs-12 rev_search_texting_name">
                                     <span  class="skyblue">S</span>
                                 </div>
-                                <div class="col-md-11 col-sm-2 col-xs-12 rev_search_texting_text">
+                                <div class="col-md-11 col-sm-10 col-xs-12 rev_search_texting_text">
                                     <span class="rev_star">
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
@@ -728,7 +728,7 @@
                                 <div class="col-md-1 col-sm-2 col-xs-12 rev_search_texting_name">
                                     <span class="orange">S</span>
                                 </div>
-                                <div class="col-md-11 col-sm-2 col-xs-12 rev_search_texting_text">
+                                <div class="col-md-11 col-sm-10 col-xs-12 rev_search_texting_text">
                                     <span class="rev_star">
                                         <i class="fas fa-star filled"></i>
                                         <i class="fas fa-star filled"></i>
