--- a/writereview.html
+++ b/writereview.html
@@ -244,12 +244,12 @@
                                 <div class="form-group">
                                     <label for="name">Overall rating:</label>
                                     <div class="star-rating">
-                                        <span class="fa fa-star o" data-rating="1"></span>
-                                        <span class="fa fa-star o" data-rating="2"></span>
-                                        <span class="fa fa-star o" data-rating="3"></span>
-                                        <span class="fa fa-star o" data-rating="4"></span>
-                                        <span class="fa fa-star o" data-rating="5"></span>
-                                        <input type="hidden" name="whatever1" class="rating-value" value="2.56">
+                                        <span class="fa fa-star" data-rating="1"></span>
+                                        <span class="fa fa-star" data-rating="2"></span>
+                                        <span class="fa fa-star" data-rating="3"></span>
+                                        <span class="fa fa-star" data-rating="4"></span>
+                                        <span class="fa fa-star" data-rating="5"></span>
+                                        <input type="hidden" name="whatever1" class="rating-value" value="">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -354,9 +354,9 @@
             var SetRatingStar = function() {
                 return $star_rating.each(function() {
                     if (parseInt($star_rating.siblings('input.rating-value').val()) >= parseInt($(this).data('rating'))) {
-                        return $(this).removeClass('fa-star').addClass('fa-star o');
+                        return $(this).addClass('o');
                     } else {
-                        return $(this).removeClass('fa-star o').addClass('fa-star');
+                        return $(this).removeClass('o');
                     }
                 });
             };
