--- a/writereview.html
+++ b/writereview.html
@@ -244,11 +244,11 @@
                                 <div class="form-group">
                                     <label for="name">Overall rating:</label>
                                     <div class="star-rating">
-                                        <span class="fa fa-star" data-rating="1"></span>
-                                        <span class="fa fa-star" data-rating="2"></span>
-                                        <span class="fa fa-star" data-rating="3"></span>
-                                        <span class="fa fa-star" data-rating="4"></span>
-                                        <span class="fa fa-star" data-rating="5"></span>
+                                        <span class="far fa-star" data-rating="1"></span>
+                                        <span class="far fa-star" data-rating="2"></span>
+                                        <span class="far fa-star" data-rating="3"></span>
+                                        <span class="far fa-star" data-rating="4"></span>
+                                        <span class="far fa-star" data-rating="5"></span>
                                         <input type="hidden" name="whatever1" class="rating-value" value="">
                                     </div>
                                 </div>
@@ -349,7 +349,7 @@
         </footer>
         <div class="upar"></div>
         <script>
-            var $star_rating = $('.star-rating .fa');
+            var $star_rating = $('.star-rating .far');
 
             var SetRatingStar = function() {
                 return $star_rating.each(function() {
