--- a/writereview.html
+++ b/writereview.html
@@ -238,8 +238,9 @@
                     <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
                         <div class="rview-section">
                             <h2 class="text-left">Create Review</h2>
-                            <p>Samsung S6 Edge</p>
                             <hr>
+                            <p>Panasonic Silver Eluga I3 Mega 16GB</p>
+                            
                             <form action="#" method="post" class="form">
                                 <div class="form-group">
                                     <label for="name">Overall rating:</label>
